examples/test/testpolicy15083.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15083
  namespace: namespace255
spec:
  podSelector:
    matchLabels:
      key19: value46
      key46: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value43
      podSelector:
        matchLabels:
          key36: value5
          key26: value42
